# Projects.Things-Sync

./: .envrc.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/history/: 67a20a45-89c1-4e58-8da8-36fd8badf419.jsonl  690307b0-b33c-4fb9-9140-dd8a336888f1.jsonl  751e4530-5e19-4bc4-8424-35010a767c38.jsonl
.claude/history/67a20a45-89c1-4e58-8da8-36fd8badf419/subagents/: agent-a4c4dc3e1a84507df.jsonl  agent-a4c4dc3e1a84507df.meta.json
.claude/history/memory/: MEMORY.md  things-repeat-rule-schema.md  todoist-things-migration.md
tests/: test_base58.py  test_cli.py  test_reference.py  test_repeats.py  test_sync.py
tests/fixtures/reference/: manifest.json
things_cli/: __init__.py  api.py  base58.py  cli.py  models.py  sync.py
