[project]
name = "things-cli"
version = "0.1.0"
description = "A self-contained interface to Things 3 via the Things Cloud sync API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
things = "things_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["things_cli"]
